# main.go
@@ -3,6 +3,8 @@ package main
 import (
 	"net/http"
 
+	"strconv"
+
 	"golang.org/x/xerrors"
 
 	_ "gin-okane-no-kyouiku/docs"
@@ -27,6 +29,7 @@ func main() {
 	r.POST("/api/v1/plans/accept", acceptSuggestedPlans)
 	r.GET("/api/v1/goals", checkGoal)
 	r.GET("/api/v1/plans/check", checkProgress)
+	r.GET("/api/v1/plans/today", getDailyPlans)
 
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
@@ -198,4 +201,41 @@ func checkProgress(c *gin.Context) {
 		}
 		c.JSON(http.StatusOK, adjustmentResponse)
 	}
+}
+
+type DailyPlansResponse struct {
+	Day        int    `json:"day"`
+	PlansToday []Task `json:"plans_today"`
+}
+
+// @Summary 指定された日のデイリープランを取得するエンドポイント
+// @Description ユーザーが指定した日のデイリープランを取得する
+// @ID getDailyPlans
+// @Tags plans
+// @Accept json
+// @Produce json
+// @Param day query int true "取得する日の番号"
+// @Success 200 {object} DailyPlansResponse
+// @Failure 400 {object} httputil.HTTPError
+// @Router /api/v1/plans/today [get]
+func getDailyPlans(c *gin.Context) {
+	dayStr, ok := c.GetQuery("day")
+	if !ok {
+		c.JSON(http.StatusBadRequest, xerrors.Errorf("Query parameter 'day' is required").Error())
+		return
+	}
+
+	day, err := strconv.Atoi(dayStr)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, xerrors.Errorf("Invalid data format: %w", err).Error())
+		return
+	}
+
+	// モックデータを使用してレスポンスを生成
+	response := DailyPlansResponse{
+		Day:        day,
+		PlansToday: []Task{{Task: "cleaning", Point: 5}},
+	}
+
+	c.JSON(http.StatusOK, response)
 }
